--- a/Labs/lab06.Rmd
+++ b/Labs/lab06.Rmd
@@ -14,12 +14,21 @@ Load up the `GSSvocab` dataset in package `carData` as `X` and drop all observat
 library(ggplot2)
 pacman::p_load(carData)
 X = carData::GSSvocab
-X
+X = na.omit(X)
+
+summary(X)
 ```
 
 Briefly summarize the documentation on this dataset. What is the data type of each variable? What do you think is the response variable the collectors of this data had in mind?
 
-#TO-DO
+Year:
+Gender:
+NativeBorn:
+AgeGroup:
+EducGroup:
+Vocab:
+Age:
+Educ:
 
 Create two different plots and identify the best-looking plot you can to examine the `age` variable. Save the best looking plot as an appropriately-named PDF.
 
@@ -56,12 +65,16 @@ vocabPlot
 
 Create the best-looking plot you can to examine the `ageGroup` variable by `gender`. Does there appear to be an association? There are many ways to do this.
 
+From the plot below it seems like most people in this dataset are either relatively young or old. The middle aged groups are the smallest. This makes sense from a population standpoint as well as the fact that both genders seems to be represented evenly, perhaps slightly more females. Again this is what we generally find in large populations.
+
 ```{r}
 ggplot(X)+
   geom_count(aes(x=ageGroup, y=gender))
 ```
 
 Create the best-looking plot you can to examine the `vocab` variable by `age`. Does there appear to be an association?
+
+The association from the plot below seems to be that there are adults who are either good at vocab or not. This is shown by the fact that on either side of vocab the age is relatively similar. In the middle we have the younger groups which makes sense since we would assume younger people have less exposure to difficult vocab.
 
 ```{r}
 X$vocab = factor(X$vocab)
@@ -72,6 +85,8 @@ vocabAgePlot
 ```
 
 Add an estimate of $f(x)$ using the smoothing geometry to the previous plot. Does there appear to be an association now?
+
+Yes the association is more clear now: middle aged people perform the best -> My assumption being that they have had the most exposure whilst remembering, younger age groups dont have this exposure, and older aged people forget it.
 
 ```{r}
 # We are going to need a different plot for the smooth to work
@@ -84,6 +99,8 @@ smoothAgeVocabPlot
 
 Using the plot from the previous question, create the best looking plot overloading with variable `gender`. Does there appear to be an interaction of `gender` and `age`?
 
+From the plot below I can't really see anything besides the general trend of young(perform worst), middle (perform best), old (perform worse). Gender seems to be pretty irrelevant in this case.
+
 ```{r}
 overloadAgeVocabPlot = ggplot(X, aes(x=age, y=vocab))+
   geom_jitter(aes(col=gender))+
@@ -95,6 +112,8 @@ overloadAgeVocabPlot
 
 Using the plot from the previous question, create the best looking plot overloading with variable `nativeBorn`. Does there appear to be an interaction of `nativeBorn` and `age`?
 
+There is a higher degree of memory in the native born group of older age. This makes sense, as you tend to not forget your native language as quickly as secondary and so on languages.
+
 ```{r}
 overloadAgeVocabPlot2 = ggplot(X, aes(x=age, y=vocab))+
   geom_jitter(aes(col=nativeBorn))+
@@ -104,6 +123,8 @@ overloadAgeVocabPlot2
 ```
 
 Create two different plots and identify the best-looking plot you can to examine the `vocab` variable by `educGroup`. Does there appear to be an association?
+
+Clearly the highest educated groups are most represented in the higher vocab scores. It pretty much follows as education decreases so does vocab score.
 
 ```{r}
 ggplot(X, aes(x=educGroup, y=vocab))+
@@ -118,6 +139,8 @@ densityEduVocabplot
 
 Using the best-looking plot from the previous question, create the best looking overloading with variable `gender`. Does there appear to be an interaction of `gender` and `educGroup`?
 
+In this plot it seems that although the mean of each group by gender is relatively similar. There are varying spreads by age group between males and females, but they "cancel" each other out when viewing the entire plot. If we zoom in on particular age groups we can see there are a greater number of lower performing men/women and vice versa regarding high performance.
+
 ```{r}
 overloadgenderEducGroupPlot = ggplot(X, aes(x=educGroup,y=vocab))+
   geom_boxplot(aes(col=gender))
@@ -126,6 +149,8 @@ overloadgenderEducGroupPlot
 ```
 
 Using facets, examine the relationship between `vocab` and `ageGroup`. You can drop year level `(Other)`. Are we getting dumber?
+
+It is a bit hard to tell if we are getting "dumber" but we can say for sure there is a lot less variation between high and lower performers.
 
 ```{r}
 ggplot(X, aes(x=vocab))+
