--- a/Labs/lab06.Rmd
+++ b/Labs/lab06.Rmd
@@ -15,20 +15,19 @@ library(ggplot2)
 pacman::p_load(carData)
 X = carData::GSSvocab
 X = na.omit(X)
-
 summary(X)
 ```
 
 Briefly summarize the documentation on this dataset. What is the data type of each variable? What do you think is the response variable the collectors of this data had in mind?
 
-Year:
-Gender:
-NativeBorn:
-AgeGroup:
-EducGroup:
-Vocab:
-Age:
-Educ:
+Year: Quantitative Discrete Values
+Gender: Categorical Nominal 
+NativeBorn: Categorical Nominal
+AgeGroup: Categorical Ordinal 
+EducGroup: Categorical Nominal
+Vocab: Quantitative Discrete 
+Age: Quantitative Continuous 
+Educ: Quantitative Continuous
 
 Create two different plots and identify the best-looking plot you can to examine the `age` variable. Save the best looking plot as an appropriately-named PDF.
 
