--- a/Labs/lab08.Rmd
+++ b/Labs/lab08.Rmd
@@ -132,14 +132,13 @@ storms[order(year,-max_wind_speed)][, .(year, max_wind_speed, name)]
 For each named storm, find its maximum category, wind speed, pressure and diameters. Do not allow the max to be NA (unless all the measurements for that storm were NA).
 
 ```{r}
-storms[,.(max_category = max(category, na.rm = TRUE), max_wind = max(wind, na.rm = TRUE), max_pressure = max(pressure, na.rm = TRUE), max_ts_diam = max(tropicalstorm_diameter, na.rm = TRUE), max_hu_diam = max(hurricane_force_diameter, na.rm = TRUE)),by=name]
+storms[,.(max_category = max(category, na.rm = TRUE), max_wind = max(wind, na.rm = TRUE), max_pressure = max(pressure, na.rm = TRUE), max_ts_diam = max(tropicalstorm_force_diameter, na.rm = TRUE), max_hu_diam = max(hurricane_force_diameter, na.rm = TRUE)),by=name]
 ```
 
 
 For each year in the dataset, tally the number of storms. "Tally" is a fancy word for "count the number of". Plot the number of storms by year. Any pattern?
 
 ```{r}
-
 num_storms_by_year = storms[,.(num_storms = uniqueN(name)),by=year]
 #num_storms_by_year[,year:=factor(year)]
 
@@ -165,7 +164,7 @@ For each year in the dataset, find the maximum wind speed per status level.
 For each storm, summarize its average location in latitude / longitude coordinates.
 
 ```{r}
-#TO-DO
+storms[, .(lat = mean(lat), long = mean(long)),by = name]
 ```
 
 For each storm, summarize its duration in number of hours (to the nearest 6hr increment).
@@ -183,7 +182,9 @@ Convert year, month, day, hour into the variable `timestamp` using the `lubridat
 For storm in a category, create a variable `storm_number` that enumerates the storms 1, 2, ... (in date order).
 
 ```{r}
-#TO-DO
+storms[,storm_number:=uniqueN(name),by=name]
+storms[,.(name,storm_number)]
+?.N
 ```
 
 Using the `lubridate` package, create new variables `day_of_week` which is a factor with levels "Sunday", "Monday", ... "Saturday" and `week_of_year` which is integer 1, 2, ..., 52.
@@ -202,29 +203,38 @@ Create a new factor variable `decile_windspeed` by binning wind speed into 10 bi
 
 ```{r}
 storms[, decile_windspeed := factor(ntile(wind,10))]
+storms[,.(name,decile_windspeed)]
 ```
 
 Create a new data frame `serious_storms` which are category 3 and above hurricanes.
 
 ```{r}
 serious_storms = storms[category>=3]
+serious_storms
 ```
 
 In `serious_storms`, merge the variables lat and long together into `lat_long` with values `lat / long` as a string.
 
 ```{r}
-#TO-DO
+serious_storms[,coords := paste(lat,"/",long)]
+serious_storms[,.(name,coords)]
 ```
 
 Let's return now to the original storms data frame. For each category, find the average wind speed, pressure and diameters (do not count the NA's in your averaging).
 
 ```{r}
 #SKIP (DUPLICATE)
+#SKIP (DUPLICATE)
+#SKIP (DUPLICATE)
+#SKIP (DUPLICATE)
 ```
 
 For each named storm, find its maximum category, wind speed, pressure and diameters (do not allow the max to be NA) and the number of readings (i.e. observations).
 
 ```{r}
+#SKIP (DUPLICATE)
+#SKIP (DUPLICATE)
+#SKIP (DUPLICATE)
 #SKIP (DUPLICATE)
 ```
 
@@ -233,17 +243,33 @@ Calculate the distance from each storm observation to Miami in a new variable `d
 ```{r}
 MIAMI_LAT_LONG_COORDS = c(25.7617, -80.1918)
 
-dist = function(lat1, long1, lat2, long2){
-  
+deg2Rad = function(deg){
+  deg*(pi/180)
 }
+
+dist = function(latList1, longList1, latList2, longList2){
+  #List 1's are the storms
+  #List 2's are Miami
+  earthRadius = 6371
+  dLat = latList2 - latList1
+  dLong = longList2 - longList2
+  
+  a = sin(dLat/2)*sin(dLat/2)+cos(deg2Rad(latList1))*cos(deg2Rad(latList2))*sin(dLong/2)*sin(dLong/2)
+  c = 2*atan2(sqrt(a),sqrt(1-a))
+  d = earthRadius*c
+}
+
 dist_miami = function(lats, longs){
+  MIAMI_LAT_LONG_COORDS = c(25.7617, 80.1918)
   n = length(lats)
   dist(lats,longs,rep(MIAMI_LAT_LONG_COORDS[1],n),rep(MIAMI_LAT_LONG_COORDS[2],n))
   
 }
 
-storms[,distance_to_miami:=dist_miami(lat,long)]
+storms[,distance_to_miami_km:=dist_miami(lat,long)]
+storms[,distance_to_miami_mi:=.62137119*(distance_to_miami_km)]
 
+storms[,.(name,distance_to_miami_km,distance_to_miami_mi),]
 
 ```
 
